<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="398dp"
        android:layout_height="86dp"
        android:layout_marginTop="68dp"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="monospace"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/alc_info"
        android:layout_width="234dp"
        android:layout_height="71dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="monospace"
        android:text="@string/btn_alc_info"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_text" />

    <Button
        android:id="@+id/profile_info"
        android:layout_width="234dp"
        android:layout_height="71dp"
        android:layout_marginBottom="236dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="monospace"
        android:text="@string/btn_profile_info"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>